--- a/flask-server/authentication/firebase_auth.json
+++ b/flask-server/authentication/firebase_auth.json
@@ -1,9 +1,10 @@
 {
-    "apiKey": "AIzaSyAyGya3R04g299teMODqw3Jq76L-Dniqm4",
-    "authDomain": "yahak-47635.firebaseapp.com",
-    "databaseURL": "https://yahak-47635-default-rtdb.firebaseio.com",
-    "projectId": "yahak-47635",
-    "storageBucket": "yahak-47635.appspot.com",
-    "messagingSenderId": "550633765743",
-    "appId": "1:550633765743:web:62f40e7f49e32192f5c69a"
+    "apiKey": "AIzaSyANcW4W-7NcHf_1VfQYoX8pZKfMzPkr_0o",
+    "authDomain": "ewha-osp-yahak.firebaseapp.com",
+    "databaseURL": "https://ewha-osp-yahak-default-rtdb.firebaseio.com",
+    "projectId": "ewha-osp-yahak",
+    "storageBucket": "ewha-osp-yahak.appspot.com",
+    "messagingSenderId": "918941450246",
+    "appId": "1:918941450246:web:98951a7cbbde67bae28387",
+    "measurementId": "G-3ZG5KPCBDL"
 }
