--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project",
   "version": "0.1.0",
   "private": true,
+  "proxy" : "http://127.0.0.1:5000",
   "homepage": "/static/react",
   "dependencies": {
     "@babel/core": "^7.16.0",
