--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 
 # production
 /build
+/flask-server/__pycache__/
+/flask-server/static/react/assets/
+/flask-server/static/react/css/
+/flask-server/static/react/js/
 
 # misc
 .DS_Store
