--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 # production
 /build
 
+*.pyc
+flask-server/__pycache__/
+flask-server/static/react/
+
 # misc
 .DS_Store
 .env.local
@@ -21,3 +25,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
